--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,2 @@
 * @tomtom-internal/osm-falkor
-/test/ @arturlepczak-tomtom
+/test/ @arturlepczak-tomtom  @piotrkukiela-tomtom @tomtom-internal/osm-falkor
